--- a/latex/files.tex
+++ b/latex/files.tex
@@ -3,6 +3,7 @@ Here is a list of all documented files with brief descriptions\-:\begin{DoxyComp
 \item\contentsline{section}{{\bfseries boyer\-\_\-moore.\-h} }{\pageref{boyer__moore_8h}}{}
 \item\contentsline{section}{{\bfseries client.\-h} }{\pageref{client_8h}}{}
 \item\contentsline{section}{{\bfseries error\-\_\-mgmt.\-h} }{\pageref{error__mgmt_8h}}{}
+\item\contentsline{section}{\hyperlink{FileManager_8c}{File\-Manager.\-c} }{\pageref{FileManager_8c}}{}
 \item\contentsline{section}{{\bfseries File\-Manager.\-h} }{\pageref{FileManager_8h}}{}
 \item\contentsline{section}{{\bfseries scramble\-\_\-tests.\-h} }{\pageref{scramble__tests_8h}}{}
 \item\contentsline{section}{{\bfseries scrambler.\-h} }{\pageref{scrambler_8h}}{}
